--- a/src/Pages/figma-lifestyle/figmaEvent.css
+++ b/src/Pages/figma-lifestyle/figmaEvent.css
@@ -12,11 +12,13 @@
   --sec-bg-color: #eeeded;
   --sec-font-color: #000;
   --inv: invert(0%);
+  --faded-text:#383838a8;
 } 
 
 .dark-theme {
-  --sec-bg-color: #000;
+  --sec-bg-color: #000000;
   --sec-font-color: #fff; 
+  --faded-text: #b3b3b3a8;
 }
 
 .figmaEvent {
@@ -306,12 +308,20 @@ video {
 
 @keyframes appear {
   0% {
-    opacity: 0;
-    translate: 50px 0 50px;
+      opacity: 0;
+      translate: 50px 0 50px;
   }
   100% {
     opacity: 1;
     translate: 0 0 0;
+  }
+}
+@keyframes appear1 {
+  0% {
+      opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -324,6 +334,11 @@ video {
   }
 }
 
+.animate {
+  animation: appear1 2s linear, float 1.5s infinite linear alternate-reverse 1s;
+}
+
+
 @media screen and (max-width: 990px) {
   .figmaEvent .event-hero {
     grid-template-columns: repeat(1, 1fr);
@@ -332,8 +347,8 @@ video {
 
   .figmaEvent .event-hero .hero-l {
     order: 2;
-    padding-inline: 2rem;
-    margin-block: 1rem;
+    padding-inline: 1rem;
+    margin-bottom: 4rem;
   }
 
   .hero-title .gdsc {
@@ -341,7 +356,7 @@ video {
   }
 
   .figmaEvent .event-hero .hero-img {
-    order: 1;
+    display: none;
   }
 }
 
@@ -351,9 +366,11 @@ video {
 
 .sponsor-box {
   border: 2px solid var(--figma-red);
-  background-color: var(--sec-bg-color);
+  box-shadow: 2px 2px 4px var(--figma-red);
+  background-color: #eeeded;
   padding: 1rem;
   border-radius: 0.5rem;
+
 }
 
 .sponsors h3 {
@@ -362,9 +379,30 @@ video {
   font-weight: bold;
 }
 
+.sponsor-box p{
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  color: black;
+}
+
 .sponsors .sponsor-box1 {
   border-color: var(--figma-blue);
+  box-shadow: 2px 2px 4px var(--figma-blue);
 }
+
+.sponsors .sponsor-box2 {
+  border-color: var(--figma-pink);
+  box-shadow: 2px 2px 4px var(--figma-pink);
+} 
+
+.sponsors .sponsor-box3, .sponsor-box1 {
+  border-color: var(--figma-purple);
+  box-shadow: 2px 2px 4px var(--figma-purple);
+
+  
+  height: 12rem;
+  aspect-ratio: 1/1;
+} 
 
 /* END SPONSORS */
 
@@ -433,6 +471,11 @@ video {
   border-radius: 0.4rem;
 }
 
+.disclaimer {
+  color: var(--faded-text);
+  font-size: 0.9rem;
+}
+
 @media screen and (max-width: 990px) {
   .event-about {
     display: flex;
@@ -485,146 +528,22 @@ video {
   font-size: 3.6rem;
 }
 
-/* .card {
-  width: 40%;
-  max-width: 300px;
-  border-radius: 0.4rem;
-  overflow: hidden;
-  aspect-ratio: 3/4;
-  box-shadow: 1px 2px 8px 0 rgba(246, 245, 245, 0.786);
-}
-
-.card img {
-  transition: 0.3s;
-  border-radius: 0.4rem;
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-}
-
-.card-info {
-  background-color: #0000006c;
-  position: absolute;
-  height: fit-content;
-  width: 100%;
-  padding-block: 2rem;
-  left: 0;
-  bottom: -100%;
-  transition: 0.3s;
-  backdrop-filter: blur(10px);
-  text-align: center;
-  line-height: 2.5rem;
-}
-
-.card-info h4 {
-  font-size: 1.4rem;
-}
-
-.card-info p {
-  line-height: 1.5rem;
-}
-
-.card-info a {
-  padding-inline: 0.6rem;
-  padding-block: 0.4rem;
-  margin-inline: 0.2rem;
-  border: 2px solid #0075b5;
-  border-radius: 0.3rem;
-  transition: 0.3s;
-}
-
-.card-info a:hover {
-  background-color: #0075b5;
-}
-
-.card:hover img {
-  scale: 1.2;
-}
-
-.card:hover .card-info {
-  bottom: 0;
-} */
-
-/* .card {
-	background-color: #dcdcdc;
-	border-radius: 5px;
-	box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
-	color: #000000;
-	padding-block: 30px;
-	position: relative;
-	width: 350px;
-	max-width: 98%;
-	text-align: center;
-  border: 3px solid var(--figma-purple);
-}
-
-
-.card .round {
-  height: 120px;
-  aspect-ratio: 1/1;
-	border: 2px solid var(--figma-purple);
-	border-radius: 50%;
-	padding: 7px;
-  margin-inline: auto;
-}
-
-.card a.primary {
-  display: inline-block;
-	background-color: var(--figma-purple);
-	border: 1px solid var(--figma-purple);
-	border-radius: 3px;
-	color: #fbfbfb;
-  font-weight: bold;
-	font-family: Montserrat, sans-serif;
-	font-weight: 500;
-	padding: 10px 25px;
-  margin-inline: 0.5rem;
-  margin-top: 0.8rem;
-}
-
-.card a.primary.ghost {
-	background-color: transparent;
-	color: var(--figma-purple);
-}
-
-.skills {
-	background-color: #1F1A36;
-	text-align: left;
-	padding: 15px;
-	margin-top: 30px;
-}
-
-.skills ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-.skills ul li {
-	border: 1px solid #2D2747;
-	border-radius: 2px;
-	display: inline-block;
-	font-size: 12px;
-	margin: 0 7px 7px 0;
-	padding: 7px;
-} */
-
 .round {
   position: absolute;
   top: 1.5rem;
   /* right: 9.5rem; */
   aspect-ratio: 1/1;
-  border: 3px solid var(--figma-purple);
-  /* border: 2px solid var(--figma-purple); */
+  border: 2px solid var(--figma-purple);
+  border-color: var(--figma-purple);
   border-radius: 50%;
   height: 120px;
   margin-inline: auto;
-  padding: 1px;
+  padding: 2px;
 }
 
-.speakers .round {
+/* .speakers .round {
   filter: blur(5px);
-}
+} */
 
 @media screen and (max-width:375px) {
   .round {
@@ -685,6 +604,7 @@ video {
   font-size: 15px;
   margin-top: 20px;
   font-weight: bold;
+  text-align: left !important;
 }
 
 .bottom {
@@ -925,14 +845,30 @@ video {
   text-align: justify !important; 
 }
 
+.carousel .slide img {
+  border: 2px solid var(--figma-purple) !important;
+}
+
 .carousel .round {
   width: auto !important;
-  border: 2px !important;
+  /* border-width: 2px !important; */
 }
 
 .carousel .control-arrow:before, .carousel.carousel-slider .control-arrow:before {
   border-top: 10px solid transparent !important;
   border-bottom: 10px solid transparent !important;
+}
+
+.carousel .social-button img {
+  border: 0 !important;
+}
+
+.carousel .control-next.control-arrow:before {
+  border-left: 8px solid var(--sec-font-color) !important;
+}
+
+.carousel .control-prev.control-arrow:before {
+  border-right: 8px solid var(--sec-font-color) !important;
 }
 
 /* END SPEAKERS */
@@ -1066,21 +1002,21 @@ video {
   background-color: var(--figma-blue);
   color: #fff;
 }
-.timeline .flex:nth-child(5) .timeline-item {
+.timeline .flex:nth-child(5) .timeline-item, .timeline .flex:nth-child(10) .timeline-item {
   border-color: var(--figma-green);
 }
-.timeline .flex:nth-child(5) .timeline-item::after {
+.timeline .flex:nth-child(5) .timeline-item::after, .timeline .flex:nth-child(10) .timeline-item::after {
   border-color: var(--figma-green);
 }
-.timeline .flex:nth-child(5) .time {
+.timeline .flex:nth-child(5) .time, .timeline .flex:nth-child(10) .time {
   background-color: var(--figma-green);
   color: #fff;
 }
 
-.timeline .flex:nth-child(6) .timeline-item {
+.timeline .flex:nth-child(6) .timeline-item, .timeline .flex:nth-child(11) .timeline-item {
   border-color: var(--figma-red);
 }
-.timeline .flex:nth-child(6) .time {
+.timeline .flex:nth-child(6) .time, .timeline .flex:nth-child(11) .time {
   background-color: var(--figma-red);
   color: #fff;
 }
@@ -1156,9 +1092,81 @@ video {
   font-size: 1rem;
 }
 
+/* GLIMPSES */
+.glimpse h2 {
+  color: var(--figma-blue);
+}
+
+.photo-container {
+  /* border: 2px solid white; */
+  aspect-ratio: 16/9;
+  width: 100%;
+  margin-inline: auto;
+  max-height: 90vh;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  gap: 0.2rem;
+}
+
+.photo-container-1, .photo-container-2 {
+  /* border: 2px solid white; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.photo-container-2 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  width: 100%;
+
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.photo-container img {
+  border-radius: 0.5rem;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 
 
+}
 
+.sub-container-2 .img-1 {
+  position: relative;
+}
+
+/* .sub-container-2 .img-1::after {
+  content: " ";
+  position: absolute;
+  background-color: #af4dff48;
+
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  border-radius: 0.5rem;
+} */
+
+@media screen and (max-width: 769px) {
+  .photo-container {
+    display: block;
+    aspect-ratio: auto;
+    max-height: none;
+  }
+  .photo-container-2 {
+    display: block;
+  }
+}
+
+
+/* LOADER */
 .loader {
   background: var(--sec-bg-color);
 	color: var(--sec-font-color);
